Add esrgan, real-esrgan, swinir and hat upscaler support
