# gyre/generated/stablecabal.swagger.json
@@ -421,6 +421,22 @@
             }
           }
         },
+        "parameters": [
+          {
+            "name": "taskGroup",
+            "description": "Empty",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "GENERATE",
+              "UPSCALE",
+              "UTILITY",
+              "HINTER"
+            ],
+            "default": "GENERATE"
+          }
+        ],
         "tags": [
           "EnginesService"
         ]
@@ -1312,6 +1328,9 @@
           "items": {
             "$ref": "#/definitions/ArtifactType"
           }
+        },
+        "task": {
+          "type": "string"
         }
       },
       "title": "Engine info struct"
@@ -1341,6 +1360,16 @@
           }
         }
       }
+    },
+    "EngineTaskGroup": {
+      "type": "string",
+      "enum": [
+        "GENERATE",
+        "UPSCALE",
+        "UTILITY",
+        "HINTER"
+      ],
+      "default": "GENERATE"
     },
     "EngineTokenizer": {
       "type": "string",
